*apache_exporter-0.8.0-r1 (29 Sep 2020)

  29 Sep 2020; Manuel Friedli <manuel@gentoo.org>
  +apache_exporter-0.8.0-r1.ebuild, -apache_exporter-0.8.0.ebuild,
  files/apache_exporter.service:
  app-metrics/apache_exporter: Change location of sysconfig file

  29 Sep 2020; Manuel Friedli <manuel@gentoo.org> -apache_exporter-0.7.0.ebuild:
  app-metrics/apache_exporter: Purge old ebuild

*apache_exporter-0.8.0 (29 Sep 2020)

  29 Sep 2020; Manuel Friedli <manuel@gentoo.org> +apache_exporter-0.8.0.ebuild:
  app-metrics/apache_exporter: Add ebuild for versin 0.8.0.  This is conforming
  to GLEP 81.

  14 Nov 2019;  <manuel@gentoo.org> apache_exporter-0.7.0.ebuild:
  app-metrics/apache_exporter: Fix ebuild again.

  14 Nov 2019;  <manuel@gentoo.org> apache_exporter-0.7.0.ebuild:
  app-metrics/apache_exporter: Fix ebuild for apache_exporter.

*node_exporter-0.18.1 (10 Nov 2019)

  10 Nov 2019;  <manuel@gentoo.org> +files/node_exporter-0.18.1-systemd.patch,
  +files/node_exporter-1.initd, +files/node_exporter.confd, +metadata.xml,
  +node_exporter-0.18.1.ebuild:
  app-metrics/node_exporter: Add systemd-patched ebuild fpr version 0.18.1.