@@ -1,3 +1,9 @@
+*apache_exporter-0.10.1 (12 Oct 2021)
+
+  12 Oct 2021; Manuel Friedli <manuel@gentoo.org>
+  +apache_exporter-0.10.1.ebuild:
+  app-metrics/apache_exporter: Bump version
+
 *apache_exporter-0.8.0-r1 (29 Sep 2020)
 
   29 Sep 2020; Manuel Friedli <manuel@gentoo.org>
